feature: death skeleton
